RESOLVED FIXED125541
[WebGL] Fix build on GL ES 2.0 targets after r160119
https://bugs.webkit.org/show_bug.cgi?id=125541
Summary [WebGL] Fix build on GL ES 2.0 targets after r160119
Ralph T
Reported 2013-12-10 13:30:43 PST
[WebGL] Fix build on GL ES 2.0 targets after r160119
Attachments
Patch (1.73 KB, patch)
2013-12-10 13:32 PST, Ralph T
no flags
Patch (2.56 KB, patch)
2013-12-11 13:11 PST, Ralph T
no flags
Ralph T
Comment 1 2013-12-10 13:32:15 PST
Ralph T
Comment 2 2013-12-10 13:35:38 PST
This is needed to fix compilation on GL ES 2.0 targets. I haven't tested half float functionality through WebGL on any GL ES 2.0 devices yet, though.
Alex Christensen
Comment 3 2013-12-11 12:53:34 PST
I proposed the same solution in https://bugs.webkit.org/show_bug.cgi?id=125464 but peavo got to it before I did. Should r160119 be removed and this be added in the same patch?
Alex Christensen
Comment 4 2013-12-11 12:55:42 PST
I mean should r160324 be removed and this be added in the same patch? r160119 is ok except for this little quirk.
Ralph T
Comment 5 2013-12-11 12:57:42 PST
(In reply to comment #4) > I mean should r160324 be removed and this be added in the same patch? r160119 is ok except for this little quirk. Yes, I think so. Let me see if I can do that.
Ralph T
Comment 6 2013-12-11 13:11:11 PST
Alex Christensen
Comment 7 2013-12-11 14:09:51 PST
Looks good to me. There's a reason that's not defined in our GLES headers, and it fixes the compiling error. I'm not a reviewer yet, though...
Brent Fulgham
Comment 8 2013-12-11 14:19:39 PST
Comment on attachment 218997 [details] Patch Looks good to me. r=me
WebKit Commit Bot
Comment 9 2013-12-11 14:43:44 PST
Comment on attachment 218997 [details] Patch Clearing flags on attachment: 218997 Committed r160458: <http://trac.webkit.org/changeset/160458>
WebKit Commit Bot
Comment 10 2013-12-11 14:43:47 PST
All reviewed patches have been landed. Closing bug.
ChangSeok Oh
Comment 11 2013-12-16 21:53:16 PST
*** Bug 125293 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.